--- a/sources/css/style.less
+++ b/sources/css/style.less
@@ -2650,7 +2650,7 @@ body {
                             &.image {
                                 width: 618px;
                                 height: 471px;
-                                background: url("@{img-url}/coophn.svg") no-repeat center / cover;
+                                background: url("@{img-url}/coophn.png") no-repeat center / cover;
                                 .zero;
                                 margin: 60px 0 0 180px;
                             }
@@ -3072,7 +3072,7 @@ body {
                                     &.image {
                                         width: 680px;
                                         height: 371px;
-                                        background: url("@{img-url}/mission.svg") no-repeat center / cover;
+                                        background: url("@{img-url}/mission.png") no-repeat center / cover;
                                         .zero;
                                         margin: 40px 0 0 150px;
                                     }
@@ -3175,7 +3175,7 @@ body {
                                 .no-list;
                                 margin-top: 14px;
                                 height: 230px;
-                                background: url("@{img-url}/goal.svg") no-repeat center / cover;
+                                background: url("@{img-url}/goal.png") no-repeat center / cover;
 
                                 li {
                                     .absolute;
@@ -3359,7 +3359,7 @@ body {
 
                             div {
                                 .relative;
-                                background: url("@{img-url}/organization.svg") no-repeat center / 100% auto;
+                                background: url("@{img-url}/organization.png") no-repeat center / 100% auto;
                                 width: 980px;
                                 height: 501px;
                                 margin-top: 30px;
