--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -1393,7 +1393,7 @@ body div#content .sub_container section.contents div.tab_contents h5 small {
   font-size: 12px;
   position: absolute;
   left: 0;
-  top: 3px;
+  top: 0;
 }
 body div#content .sub_container section.contents div.tab_contents ul {
   margin-top: 10px;
@@ -2514,57 +2514,78 @@ body div#content .sub_container section.center_contents div.tab_contents#tab03 d
 body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 ul li:first-child {
   margin-top: 0;
 }
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.work_list {
-  margin-top: 20px;
-}
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.work_list ul {
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.team_work ul {
   margin: 0 0 130px 0;
   padding: 0;
   border: none;
-  border-top: 2px solid #EA609E;
 }
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.work_list ul li {
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.team_work ul li {
   margin: 0;
-  padding: 24px 0;
-  border-bottom: 1px solid #C8C8C8;
   font-size: 18px;
   color: #555;
 }
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.work_list ul li:nth-child(1) {
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.team_work ul li:nth-child(1) {
   font-size: 20px;
+  border-bottom: 2px solid #EA609E;
   color: #EA609E;
   font-weight: 800;
+  padding: 20px 0 10px 0;
 }
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.work_list ul li dl {
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.team_work ul li table {
+  border-bottom: 1px solid #c8c8c8;
+  width: 100%;
+  border-spacing: 0;
+  padding: 0;
+  border-collapse: collapse;
+  font-size: 18px;
+  margin: 0 0 30px;
+}
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.team_work ul li table tbody th {
+  padding: 14px 4px;
+  vertical-align: middle;
+  text-align: center;
+  color: #333;
+  width: 160px;
+  border-bottom: 1px solid #c8c8c8;
+  border-right: 1px solid #c8c8c8;
+}
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.team_work ul li table tbody th:last-child {
+  border-right: none;
+  width: 600px;
+}
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.team_work ul li table tbody td {
+  border-bottom: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  vertical-align: middle;
+  text-align: center;
+  padding: 20px 4px;
+}
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.team_work ul li table tbody td:last-child {
+  padding-left: 20px;
+  text-align: left;
+  border-right: none;
+}
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.team_work ul li table tbody td span {
+  display: block;
+  margin-top: 6px;
+}
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.team_work ul li table tbody td ul.work_list {
   margin: 0;
 }
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.work_list ul li dl::after {
-  content: "";
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.team_work ul li table tbody td ul.work_list li {
+  border: none;
+  margin-top: 8px;
+}
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.team_work ul li table tbody td ul.work_list li span {
   display: block;
-  clear: both;
+  margin-left: 7px;
 }
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.work_list ul li dl dt {
-  display: inline-block;
-  float: left;
-  width: 280px;
-  margin-right: 140px;
-}
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.work_list ul li dl dd {
-  float: left;
-  display: block;
-  margin: 0;
-  width: 540px;
-  word-break: keep-all;
-  margin-left: 420px;
-  margin-top: 10px;
-  line-height: 26px;
-}
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.work_list ul li dl dd:nth-of-type(1) {
-  margin: 0;
-}
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.work_list ul li dl dd span {
-  display: block;
-  margin-left: 9px;
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 div.team_work ul li table tbody td ul.work_list li:first-child {
+  color: #555;
+  font-size: 17px;
+  font-weight: 400;
+  padding: 0;
+  margin-top: 0;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con01 a {
   display: block;
@@ -3677,6 +3698,26 @@ body div#content .sub_container.board-write .bbs_container div.text textarea {
   body div#content .sub_container.board-write .bbs_container div.text textarea {
     padding: 20px;
     min-height: 300px;
+  }
+}
+body div#content .sub_container.board-write .bbs_container div.text input[type="text"] {
+  width: 100%;
+  height: 3.28571429rem;
+  line-height: 3.28571429rem;
+  font-size: 1.14285714rem;
+  border: none;
+  border-bottom: 1px solid #EBEBEB;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+@media all and (min-width: 1200px) {
+  body div#content .sub_container.board-write .bbs_container div.text input[type="text"] {
+    font-size: 18px;
+    display: inline-block;
+    text-align: left;
+    vertical-align: top;
+    padding: 0 10px;
   }
 }
 body div#content .sub_container.board-write .bbs_container ul.file,
